--- a/popup.html
+++ b/popup.html
@@ -46,6 +46,6 @@
         </div>
     </div>
     <script src="/scripts/jquery.min.js" type="text/javascript"></script>
-    <script src="/scripts/extension.js" type="text/javascript"></script>
+    <script src="/scripts/surf.js" type="text/javascript"></script>
 </body>
 </html>
