--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -34,15 +34,16 @@
     </style>
     <div class="container">
         <div class="page-header">
-          <h3>Chromie Pop</h3>
+          <h3>المتشعّب</h3>
+          <h6>إضافة لنشر التّعليقات آليّا</h6>
           <p id="status"></p>
         </div>
         <div class="form-group">
             <input class="form-control" type="text" id="linkstext">
         </div>
         <div>
-          <button class="btn btn-primary" id="changelinks">Change</button>
-          <button class="btn btn-primary" id="startSurf">إبدأ</button>
+          <button class="btn btn-primary" id="startSurf">تشغيل</button>
+          <button class="btn btn-primary" id="stop">إيقاف</button>
         </div>
     </div>
     <script src="/scripts/jquery.min.js" type="text/javascript"></script>
