--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-toggle.min.css">
 </head>
 <body>
     <style>
@@ -38,17 +39,25 @@
           <h6>إضافة لنشر التّعليقات آليّا</h6>
           <p id="status"></p>
         </div>
+        <!--
         <div class="form-group">
             <input class="form-control" type="text" id="linkstext">
         </div>
+        <hr>
+      -->
+        <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
+        <!--
         <div>
           <button class="btn btn-primary" id="startSurf">تشغيل</button>
+          <input type="checkbox" checked data-toggle="toggle">
           <button class="btn btn-primary" id="stop">إيقاف</button>
           <hr>
             <button class="btn btn-primary" id="toggle-btn">ON</button>
         </div>
+      -->
     </div>
     <script src="/scripts/jquery.min.js" type="text/javascript"></script>
+    <script src="/scripts/bootstrap-toggle.min.js"></script>
     <script src="/scripts/surf.js" type="text/javascript"></script>
 </body>
 </html>
