toggle button is workding!

--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,12 @@
         </div>
         <hr>
       -->
-        <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
+        <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger" onclick="toggleState()">
+        <script type="javascript">
+          console.log('xxx');
+          document.write('sdfsdf');
+        </script>
+        <div id="console-event">dd</div>
         <!--
         <div>
           <button class="btn btn-primary" id="startSurf">تشغيل</button>
