--- a/popup.html
+++ b/popup.html
@@ -45,21 +45,12 @@
         </div>
         <hr>
       -->
-        <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger" onclick="toggleState()">
-        <script type="javascript">
-          console.log('xxx');
-          document.write('sdfsdf');
-        </script>
-        <div id="console-event">dd</div>
-        <!--
-        <div>
-          <button class="btn btn-primary" id="startSurf">تشغيل</button>
-          <input type="checkbox" checked data-toggle="toggle">
-          <button class="btn btn-primary" id="stop">إيقاف</button>
+        <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
+        <div id="console-event">status</div>
+        <div id="theContract" style="visibility: hidden;">
           <hr>
-            <button class="btn btn-primary" id="toggle-btn">ON</button>
+          <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="تنشيط" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">          
         </div>
-      -->
     </div>
     <script src="/scripts/jquery.min.js" type="text/javascript"></script>
     <script src="/scripts/bootstrap-toggle.min.js"></script>
