couldn't yet change the icon

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
       .container {
         max-height: 600px;
         min-height: 300px;
-        width: 250px;
+        width: 450px;
         border: 2px solid rgba(0,0,0,0.3);
         border-radius: 2px;
         background: white;
@@ -47,9 +47,9 @@
       -->
         <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
         <div id="console-event">status</div>
-        <div id="theContract" style="visibility: hidden;">
+        <div id="theContract" style="display: none;">
           <hr>
-          <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="تنشيط" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">          
+          <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="تنشيط" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
         </div>
     </div>
     <script src="/scripts/jquery.min.js" type="text/javascript"></script>
