--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,7 @@
         <div id="console-event">status</div>
         <div id="theContract" style="display: none;">
           <hr>
-          <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="تنشيط" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
+          <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="فعّل" data-off="عطّل" data-onstyle="success" data-offstyle="danger">
         </div>
     </div>
     <script src="/scripts/jquery.min.js" type="text/javascript"></script>
