--- a/popup2.html
+++ b/popup2.html
@@ -19,7 +19,7 @@
 
     <header>
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" dir="rtl" style="float:right;">
         <a class="navbar-brand" href="popup.html">الأولى</a>
         <a class="navbar-brand" href="popup.html">الأولى</a>
         <a class="navbar-brand" href="popup.html">شروط الإستخدام</a>
