--- a/popup2.html
+++ b/popup2.html
@@ -54,7 +54,7 @@
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Placed at the end of dthe document so the pages load faster -->
     <script src="scripts/jquery-3.3.1.slim.min.js"></script>
     <script src="scripts/popper.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
