--- a/popup.html
+++ b/popup.html
@@ -9,12 +9,14 @@
     <title>المتشعّب - إضافة كروم للقيادة بيد واحدة أو بدون</title>
 
     <!-- Scripts -->
-    <script src="scripts/jquery-2.0.3.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+    <script src="bootstrap4/jquery-3.3.1.slim.min.js"></script>
+    <script src="bootstrap4/bootstrap.min.js"></script>
+    <script src="bootstrap4/popper.min.js"></script>
 
     <!-- Cascading Style Sheets -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="bootstrap4/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/custom.css" rel="stylesheet" media="screen">
+    <link href="bootstrap4/navbar-top.css" rel="stylesheet" media="screen">
 </head>
 
 <body>
