--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="https://getbootstrap.com" id="dropdown10" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">الإعدادات</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10"  style="text-align: right;">
+                    <div class="dropdown-menu" aria-labelledby="dropdown10" style="text-align: right;">
                         <a class="dropdown-item" href="#">تويتر</a>
                         <a class="dropdown-item" href="#">فيسبوك</a>
                         <a class="dropdown-item" href="#">أخرى</a>
@@ -48,6 +48,9 @@
 
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="#">هيثم شهاب</a>
+        <a class="navbar-brand" href="#">
+        <i class="glyphicon glyphicon-thumbs-up"></i>
+        </a>
     </nav>
     <main role="main" class="container" style="text-align: right;">
         <div class="jumbotron">
