--- a/popup.html
+++ b/popup.html
@@ -1,71 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html dir="rtl">
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>المتشعّب - إضافة كروم لقيادته بيد واحدة أو بدون</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="bootstrap4/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="bootstrap4/navbar-top.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-toggle.min.css">
 </head>
 
-<body style="background-color: #e9ecef;">
+<body>
+    <style>
+        .container {
+            max-height: 600px;
+            min-height: 300px;
+            width: 450px;
+            border: 2px solid rgba(0, 0, 0, 0.3);
+            border-radius: 2px;
+            background: white;
+        }
 
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">المتشعّب</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="https://getbootstrap.com" id="dropdown10" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">الإعدادات</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10" style="text-align: right;">
-                        <a class="dropdown-item" href="#">تويتر</a>
-                        <a class="dropdown-item" href="#">فيسبوك</a>
-                        <a class="dropdown-item" href="#">أخرى</a>
-                    </div>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
+        body {
+            font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+            font-size: 100%;
+        }
+
+        #status {
+            /* avoid an excessively wide status text */
+            white-space: pre;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            max-width: 400px;
+        }
+
+        .patient-list {
+            max-height: 250px;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            max-width: 100%;
+        }
+
+    </style>
+    <div class="container">
+        <div class="page-header">
+            <h3>المتشعّب</h3>
+            <h6>إضافة لنشر التّعليقات آليّا</h6>
+            <p id="status"></p>
         </div>
-    </nav>
-
-    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">هيثم شهاب</a>
-        <a class="navbar-brand" href="#">
-        <i class="glyphicon glyphicon-thumbs-up"></i>
-        </a>
-    </nav>
-    <main role="main" class="container" style="text-align: right;">
-        <div class="jumbotron">
-            <h1>المتشعّب - إضافة جووجل كروم</h1>
-            <p class="lead">This example is a quick exercise to illustrate how the top-aligned navbar works. As you scroll, this navbar remains in its original position and moves with the rest of the page.</p>
-            <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">View navbar docs &raquo;</a>
+        <!--
+        <div class="form-group">
+            <input class="form-control" type="text" id="linkstext">
         </div>
-    </main>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="bootstrap4/jquery-3.3.1.slim.min.js"></script>
-    <script src="bootstrap4/popper.min.js"></script>
-    <script src="bootstrap4/bootstrap.min.js"></script>
+        <hr>
+      -->
+        <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
+        <div id="console-event">status</div>
+        <div id="theContract" style="display: none;">
+            <hr>
+            <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="فعّل" data-off="عطّل" data-onstyle="success" data-offstyle="danger">
+        </div>
+    </div>
+    <script src="/scripts/jquery.min.js" type="text/javascript"></script>
+    <script src="/scripts/bootstrap-toggle.min.js"></script>
+    <script src="/scripts/surf.js" type="text/javascript"></script>
 </body>
 
 </html>
