--- a/starter.html
+++ b/starter.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-  <meta http-equiv="refresh" content="3">
+  <meta http-equiv="refresh" content="">
   <script src="scripts/background.js"></script>
+  <script src="scripts/surf.js"></script>
 </head>
 <body>
   أشعل
