loop with bugs!

--- a/starter.html
+++ b/starter.html
@@ -2,6 +2,7 @@
 <head>
   <meta http-equiv="refresh" content="3">
   <script src="scripts/background.js"></script>
+  <script src="scripts/starter.js"></script>
 </head>
 <body>
   أشعل
