--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
             left: 0;
             bottom: 0;
             width: 100%;
-            color: white;
+            color: black;
             padding-right:10px;
             padding-bottom:10px;
         }
@@ -72,7 +72,9 @@
             <hr>
             <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="فعّل" data-off="عطّل" data-onstyle="success" data-offstyle="danger">
         </div>
-    <div id="byMe"><a href="https://twitter.com/hythamshiehab2">هيثم شهاب</a></div>
+    <div id="byMe">
+        <a href="https://twitter.com/hythamshiehab2">هيثم شهاب</a>
     </div>
+ </div>
 </body>
 </html>
