as the Internet is f* up, design is an important!

--- a/popup.html
+++ b/popup.html
@@ -12,16 +12,17 @@
 
 <body>
     <style>
-        #byMe {
+        .byMe {
             font-size: 120%;
             font-weight: bold;
             position: fixed;
             left: 0;
             bottom: 0;
             width: 100%;
-            color: black;
             padding-right:10px;
             padding-bottom:10px;
+            text-decoration: none !important;
+            font-size: medium;
         }
         .container {
             max-height: 700px;
@@ -58,7 +59,7 @@
             <h3>الناموسيه</h3>
             <h6>إضافة لنشر التّعليقات آليّا</h6>
             <p id="status"></p>
-            <h4><a href="options.html">لوحة التحكم</a></h4>
+            <h4><a style="text-decoration:none;" href="options.html">لوحة التحكم</a></h4>
         </div>
         <!--
         <div class="form-group">
@@ -66,14 +67,16 @@
         </div>
         <hr>
       -->
-        <input id="toggleButton" type="checkbox" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
+        <input id="toggleButton" type="checkbox" data-width="100" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
         <div id="console-event">status</div>
+        <div id="console-event" style="color: coral;">سوف يتم التنشيط في علامة التبويب الحالية!</div>
+        
         <div id="theContract" style="display: none;">
             <hr>
-            <input id="toggleStartNow" type="checkbox" data-toggle="toggle" data-on="فعّل" data-off="عطّل" data-onstyle="success" data-offstyle="danger">
+            <input id="toggleStartNow" type="checkbox" data-width="100" data-toggle="toggle" data-on="فعّل" data-off="عطّل" data-onstyle="success" data-offstyle="danger">
         </div>
-    <div id="byMe">
-        <a href="https://twitter.com/hythamshiehab2">هيثم شهاب</a>
+    <div id="byMe" class="byMe">
+        <a class="byMe" href="https://twitter.com/hythamshiehab2" target="_new">هيثم شهاب</a>
     </div>
  </div>
 </body>
