adding startEngine function that will create a new tab and continue from there

--- a/starter.html
+++ b/starter.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html dir="rtl">
 <head>
-  <meta http-equiv="refresh" content="3">
+  <meta charset="utf-8">
   <script src="scripts/background.js"></script>
   <script src="scripts/starter.js"></script>
 </head>
