--- a/starter.html
+++ b/starter.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html dir="rtl">
+
 <head>
-  <meta charset="utf-8">
-  <script src="scripts/background.js"></script>
-  <script src="scripts/starter.js"></script>
+    <meta charset="utf-8">
+    <script src="/scripts/jquery.min.js" type="text/javascript"></script>
+    <script src="/scripts/bootstrap-toggle.min.js"></script>
+    <script src="/scripts/surf.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-toggle.min.css">
+    
 </head>
+
 <body>
-  أشعل
+    <style>
+        .byMe {
+            font-size: 120%;
+            font-weight: bold;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            padding-right:10px;
+            padding-bottom:10px;
+            text-decoration: none !important;
+            font-size: medium;
+        }
+        .container {
+            min-height: 450px;
+            width: 750px;
+            border: 2px solid rgba(0, 0, 0, 0.3);
+            border-radius: 2px;
+            background: white;
+        }
+
+        body {
+            font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+            font-size: 100%;
+        }
+
+        #status {
+            /* avoid an excessively wide status text */
+            white-space: pre;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            max-width: 400px;
+        }
+
+        .patient-list {
+            max-height: 350px;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            max-width: 100%;
+        }
+
+    </style>
+    <div class="container">
+        <div class="page-header">
+            <h3>الناموسيه</h3>
+            <h6>إضافة لنشر التّعليقات آليّا</h6>
+            <p id="status"></p>
+            <h4><a style="text-decoration:none;" href="options.html">لوحة التحكم</a></h4>
+        </div>
+        <!--
+        <div class="form-group">
+            <input class="form-control" type="text" id="linkstext">
+        </div>
+        <hr>
+      -->
+        <input id="toggleButton" type="checkbox" data-width="100" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
+        <div id="console-event">status</div>
+        <div id="console-event" style="color: coral;">سوف يتم التنشيط في علامة تبويب جديده!</div>
+        
+        <div id="theContract" style="display: none;">
+            <hr>
+            <input id="toggleStartNow" type="checkbox" data-width="100" data-toggle="toggle" data-on="فعّل" data-off="عطّل" data-onstyle="success" data-offstyle="danger">
+        </div>
+    <div id="byMe" class="byMe">
+        <a class="byMe" href="https://twitter.com/hythamshiehab2" target="_new">هيثم شهاب</a>
+    </div>
+ </div>
 </body>
 </html>
