--- a/popup.html
+++ b/popup.html
@@ -59,7 +59,7 @@
             <h3>الناموسيه</h3>
             <h6>إضافة لنشر التّعليقات آليّا</h6>
             <p id="status"></p>
-            <h4><a style="text-decoration:none;" href="options.html">لوحة التحكم</a></h4>
+            <h4><a style="text-decoration:none;" target="_new" href="options.html">لوحة التحكم</a></h4>
         </div>
         <!--
         <div class="form-group">
