adding pin to options.html

--- a/options.html
+++ b/options.html
@@ -43,6 +43,13 @@
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
+                <li class="nav-item">
+<div class="input-group mb-3" dir="ltr">
+  <div class="input-group-prepend">
+    <button class="btn btn-outline-secondary" id="pin" type="button" style="background-color: #343a40 !important;border: 0px solid #ced4da !important;">#</button>
+  </div>
+  <input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1" id="pinHolder" style="width: 60px !important;background-color: #343a40 !important;border: 0px solid #ced4da !important;">
+</div>                </li>
             </ul>
         </div>
     </nav>
@@ -67,6 +74,7 @@
     <script src="bootstrap4/jquery-3.3.1.slim.min.js"></script>
     <script src="bootstrap4/popper.min.js"></script>
     <script src="bootstrap4/bootstrap.min.js"></script>
+    <script src="scripts/options.js"></script>
 </body>
 
 </html>
