--- a/popup.html
+++ b/popup.html
@@ -71,9 +71,7 @@
         <input id="toggleButton" type="checkbox" data-width="100" data-toggle="toggle" data-on="تشغيل" data-off="إيقاف" data-onstyle="success" data-offstyle="danger">
         <div id="console-event">status</div>
         <div id="console-event" style="color: coral;">سوف يتم التنشيط في علامة تبويب جديده!</div>
-
-        <div id="theContract" style="display: none;">
-            <hr>
+<div id="theContract" style="display: none;">            <hr>
             <input id="toggleStartNow" type="checkbox" data-width="100" data-toggle="toggle" data-on="فعّل" data-off="عطّل" data-onstyle="success" data-offstyle="danger">
         </div>
         <div id="byMe" class="byMe">
